--- a/src/Testcontainers.Spire/conf/agent/agent.conf
+++ b/src/Testcontainers.Spire/conf/agent/agent.conf
@@ -3,7 +3,7 @@ agent {
     log_level = "DEBUG"
     server_address = "127.0.0.1"
     server_port = "8081"
-    socket_path ="/run/spire/agent/public/api.sock"
+    socket_path ="/tmp/spire/agent/public/api.sock"
     trust_bundle_path = "/etc/spire/agent/dummy_root_ca.crt"
     trust_domain = "example.org"
 }
@@ -18,8 +18,9 @@ plugins {
             directory = "/var/lib/spire/agent/.data"
         }
     }
-    WorkloadAttestor "unix" {
+    WorkloadAttestor "docker" {
         plugin_data {
+            docker_socket_path = "unix:///var/run/docker.sock"
         }
     }
 }
