--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
             "type": "dotnet",
             "request": "launch",
             "projectPath": "${workspaceFolder}/src/Testcontainers.Spire/Testcontainers.Spire.csproj",
-            "launchConfigurationId": "TargetFramework=;Testcontainers.Spire"
+            "launchConfigurationId": "TargetFramework=net8.0;Testcontainers.Spire"
         },
         {
             "name": "C#: Testcontainers.Spire.Tests",
             "type": "dotnet",
             "request": "launch",
             "projectPath": "${workspaceFolder}/tests/Testcontainers.Spire.Tests/Testcontainers.Spire.Tests.csproj",
-            "launchConfigurationId": "TargetFramework=;Testcontainers.Spire.Tests"
+            "launchConfigurationId": "TargetFramework=net8.0;Testcontainers.Spire.Tests"
         }
     ]
 }
