--- a/src/Testcontainers.Spire/resources/server.conf
+++ b/src/Testcontainers.Spire/resources/server.conf
@@ -15,8 +15,10 @@ plugins {
         }
     }
 
-    NodeAttestor "join_token" {
+    NodeAttestor "x509pop" {
         plugin_data {
+            ca_bundle_path = "/etc/spire/server/agent.crt"
+            agent_path_template = "/cn/{{ .Subject.CommonName }}"
         }
     }
 
@@ -26,8 +28,8 @@ plugins {
 
     UpstreamAuthority "disk" {
         plugin_data {
-            key_file_path = "/etc/spire/server/dummy_upstream_ca.key"
-            cert_file_path = "/etc/spire/server/dummy_upstream_ca.crt"
+            key_file_path = "/etc/spire/server/server.key"
+            cert_file_path = "/etc/spire/server/server.crt"
         }
     }
 }
