--- a/src/Testcontainers.Client/Testcontainers.Client.csproj
+++ b/src/Testcontainers.Client/Testcontainers.Client.csproj
@@ -2,15 +2,11 @@
   <PropertyGroup>
       <TargetFrameworks>net6.0;net8.0;netstandard2.0;netstandard2.1</TargetFrameworks>
       <LangVersion>latest</LangVersion>
-      <Nullable>enable</Nullable>
+      <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Testcontainers" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="resources/*" />
+      <ProjectReference Include="../Testcontainers.Spire/Testcontainers.Spire.csproj"/>
   </ItemGroup>
 
 </Project>
