--- a/src/Testcontainers.Spire/resources/agent.conf
+++ b/src/Testcontainers.Spire/resources/agent.conf
@@ -4,13 +4,15 @@ agent {
     server_address = "127.0.0.1"
     server_port = "8081"
     socket_path ="/tmp/spire/agent/public/api.sock"
-    trust_bundle_path = "/etc/spire/agent/dummy_root_ca.crt"
+    trust_bundle_path = "/etc/spire/agent/server.crt"
     trust_domain = "example.org"
 }
 
 plugins {
-    NodeAttestor "join_token" {
+    NodeAttestor "x509pop" {
         plugin_data {
+            private_key_path = "/etc/spire/agent/agent.key"
+            certificate_path = "/etc/spire/agent/agent.crt"
         }
     }
     KeyManager "disk" {
@@ -21,6 +23,7 @@ plugins {
     WorkloadAttestor "docker" {
         plugin_data {
             docker_socket_path = "unix:///var/run/docker.sock"
+            use_new_container_locator = true
         }
     }
 }
