--- a/src/Testcontainers.Spire/resources/agent.conf
+++ b/src/Testcontainers.Spire/resources/agent.conf
@@ -1,18 +1,18 @@
 agent {
     data_dir = "/var/lib/spire/agent/.data"
     log_level = "DEBUG"
-    server_address = "127.0.0.1"
+    server_address = "$SERVER_ADDRESS"
     server_port = "8081"
     socket_path ="/tmp/spire/agent/public/api.sock"
-    trust_bundle_path = "/etc/spire/agent/server.crt"
-    trust_domain = "example.org"
+    trust_bundle_path = "$TRUST_BUNDLE_PATH"
+    trust_domain = "$TRUST_DOMAIN"
 }
 
 plugins {
     NodeAttestor "x509pop" {
         plugin_data {
-            private_key_path = "/etc/spire/agent/agent.key"
-            certificate_path = "/etc/spire/agent/agent.crt"
+            private_key_path = "$PRIVATE_KEY_PATH"
+            certificate_path = "$CERTIFICATE_PATH"
         }
     }
     KeyManager "disk" {
