--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,24 @@
 {
     "configurations": [
-        {
-            "name": "C#: Testcontainers.Spire",
-            "type": "dotnet",
-            "request": "launch",
-            "projectPath": "${workspaceFolder}/src/Testcontainers.Spire/Testcontainers.Spire.csproj",
-            "launchConfigurationId": "TargetFramework=net8.0;Testcontainers.Spire"
-        },
-        {
-            "name": "C#: Testcontainers.Spire.Tests",
-            "type": "dotnet",
-            "request": "launch",
-            "projectPath": "${workspaceFolder}/tests/Testcontainers.Spire.Tests/Testcontainers.Spire.Tests.csproj",
-            "launchConfigurationId": "TargetFramework=net8.0;Testcontainers.Spire.Tests"
-        }
+      {
+        "type": "coreclr",
+        "request": "launch",
+        "name": "Launch Testcontainers.Spire",
+        "program": "${workspaceFolder}/src/Testcontainers.Spire/bin/Debug/net8.0/Testcontainers.Spire.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}/src/Testcontainers.Spire",
+        "stopAtEntry": false,
+        "console": "internalConsole"
+      },
+      {
+        "type": "coreclr",
+        "request": "launch",
+        "name": "Launch Testcontainers.Client",
+        "program": "${workspaceFolder}/src/Testcontainers.Client/bin/Debug/net8.0/Testcontainers.Client.dll",
+        "args": [],
+        "cwd": "${workspaceFolder}/src/Testcontainers.Client",
+        "stopAtEntry": false,
+        "console": "internalConsole"
+      }
     ]
-}
+  }
