--- a/src/Testcontainers.Spire/resources/server.conf
+++ b/src/Testcontainers.Spire/resources/server.conf
@@ -2,7 +2,7 @@ server {
     bind_address = "0.0.0.0"
     bind_port = "8081"
     socket_path = "/tmp/spire-server/private/api.sock"
-    trust_domain = "example.org"
+    trust_domain = "$TRUST_DOMAIN"
     data_dir = "/var/lib/spire/server/.data"
     log_level = "DEBUG"
 }
@@ -17,7 +17,7 @@ plugins {
 
     NodeAttestor "x509pop" {
         plugin_data {
-            ca_bundle_path = "/etc/spire/server/agent.crt"
+            ca_bundle_path = "$CA_BUNDLE_PATH"
             agent_path_template = "/cn/{{ .Subject.CommonName }}"
         }
     }
@@ -28,8 +28,8 @@ plugins {
 
     UpstreamAuthority "disk" {
         plugin_data {
-            key_file_path = "/etc/spire/server/server.key"
-            cert_file_path = "/etc/spire/server/server.crt"
+            key_file_path = "$KEY_FILE_PATH"
+            cert_file_path = "$CERT_FILE_PATH"
         }
     }
 }
