--- a/src/Testcontainers.Spire/resources/server.conf
+++ b/src/Testcontainers.Spire/resources/server.conf
@@ -18,7 +18,7 @@ plugins {
     NodeAttestor "x509pop" {
         plugin_data {
             ca_bundle_path = "$CA_BUNDLE_PATH"
-            agent_path_template = "/cn/{{ .Subject.CommonName }}"
+            agent_path_template = "/x509pop/cn/{{ .Subject.CommonName }}"
         }
     }
 
