--- a/src/Testcontainers.Spire/Testcontainers.Spire.csproj
+++ b/src/Testcontainers.Spire/Testcontainers.Spire.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="" />
+    <None Include="../../LICENSE" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Testcontainers" />
   </ItemGroup>
 
