--- a/src/Spiffe.Testcontainers.Spire/Spiffe.Testcontainers.Spire.csproj
+++ b/src/Spiffe.Testcontainers.Spire/Spiffe.Testcontainers.Spire.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <None Include="../../README.md" Pack="true" PackagePath="" />
     <None Include="../../LICENSE" Pack="true" PackagePath="" />
+    <None Include="../../icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
