--- a/tests/Spiffe.Testcontainers.Spire.Tests/Spiffe.Testcontainers.Spire.Tests.csproj
+++ b/tests/Spiffe.Testcontainers.Spire.Tests/Spiffe.Testcontainers.Spire.Tests.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="xunit.runner.visualstudio">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
-    <PackageReference Include="Scriban" />
+    <PackageReference Include="Handlebars.Net" />
   </ItemGroup>
 
   <ItemGroup>
