--- a/src/Spiffe.Testcontainers.Spire/Spiffe.Testcontainers.Spire.csproj
+++ b/src/Spiffe.Testcontainers.Spire/Spiffe.Testcontainers.Spire.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Testcontainers" />
+    <PackageReference Include="Handlebars.Net" />
   </ItemGroup>
 
   <ItemGroup>
